--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
       - Hofladenlogistik: hofladenlogistik.md
     - API:
       - MultiRoute API: api-intro.md
-      - Einführung: ablauf.md
+#      - Einführung: ablauf.md
       - Routen & Endpunkte: routen.md
       - Programmbeispiel PHP: code_php.md
       - Programmbeispiel C#: code_csharp.md
