--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,8 @@ plugins:
       minify_css: true
       htmlmin_opts:
           remove_comments: true
+  - search:
+      lang: de
           
 #extra:
 #  alternate:
