--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,7 +79,6 @@ repo_name: gbconsite/MultiRoute-Webservice
 edit_uri: ./edit/main/docs
 
 markdown_extensions:
-  - lightgallery
   - attr_list
   - md_in_html # enable lazy loading images via ![!](assets/Auftragsinfos.jpg){ loading=lazy }
   - admonition
@@ -103,6 +102,7 @@ plugins:
           remove_comments: true
   - search:
       lang: de
+  - glightbox
           
 #extra:
 #  alternate:
