--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install "mkdocs-material==9.1.5"
-      - run: pip install lightgallery
+      - run: pip install mkdocs-glightbox
       - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
           
