--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install "mkdocs-material==9.1.5"
+      - run: pip install "mkdocs-material==9.2.0b2"
       - run: pip install mkdocs-glightbox
       - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
