--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - run: pip install "mkdocs-material==9.2.0b2"
       - run: pip install mkdocs-glightbox
       - run: pip install mkdocs-minify-plugin
+      - run: pip install pillow cairosvg
       - run: mkdocs gh-deploy --force
           
       # Node setup
