--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install "mkdocs-material==9.2.0b2"
-      - run: pip install mkdocs-glightbox
-      - run: pip install mkdocs-minify-plugin
-      - run: pip install pillow cairosvg
+      - run: pip install mkdocs-material
+      - run: pip install mkdocs-glightbox mkdocs-minify-plugin pillow cairosvg
       - run: mkdocs gh-deploy --force
           
       # Node setup
