--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,7 @@ markdown_extensions:
   - pymdownx.superfences
   - markdown.extensions.toc:
       baselevel: 1
-      permalink: true
+      permalink: ""
   - toc:
       title: Inhalt
   - pymdownx.emoji:
